KS:M => fixed wrong table presentation for firefox and vivaldi Implemented BlueprintDataSource to enhance modularity and readability

--- a/keyscore-manager/src/app/resources/resources-styles.css
+++ b/keyscore-manager/src/app/resources/resources-styles.css
@@ -1,8 +1,7 @@
 .table-position {
-    margin: 15px;
+    width: 100%;
 }
 
-.search-position {
-    margin-left: 15px;
-    margin-right: 15px;
+.table-wrapper {
+    padding: 15px;
 }
